--- a/packages/ui/src/components/w-box/w-box.scss
+++ b/packages/ui/src/components/w-box/w-box.scss
@@ -71,6 +71,7 @@ $section-padding: .8rem;
       transform: translate(-50%, -50%);
       min-width: 90vw;
       max-height: 80vh;
+      border-radius: 14px;
 
       @media screen and (min-width: 600px) {
         min-width: 36rem;
