--- a/packages/ui/src/components/w-box/w-box.scss
+++ b/packages/ui/src/components/w-box/w-box.scss
@@ -52,7 +52,7 @@ $section-padding: .8rem;
     &--floating, &--fixed-right {
       .box__header {
         padding: 1.2rem 2.4rem;
-        border-bottom: 0 !important;
+        box-sizing: content-box;
 
         font-weight: bold;
         font-size: 1.2rem;
@@ -92,7 +92,7 @@ $section-padding: .8rem;
       border-radius: 0;
 
       @media screen and (min-width: 600px) {
-        width: 40rem;
+        width: 44rem;
       }
     }
 
