--- a/packages/ui/src/components/w-box/w-box.scss
+++ b/packages/ui/src/components/w-box/w-box.scss
@@ -131,6 +131,7 @@ $section-padding: .8rem;
     &:not(&--outer) {
       @include themed() {
         border-bottom: 1px solid t(border-color);
+        background: t(background-color-alt);
       }
     }
   }
