--- a/packages/ui/src/components/w-icon/w-icon.scss
+++ b/packages/ui/src/components/w-icon/w-icon.scss
@@ -19,7 +19,7 @@
       border-radius: 5px;
 
       &:hover {
-        background: t(background-color-alt);
+        background: t(background-color);
       }
 
       &:active {
