--- a/packages/ui/src/components/form/w-search/_internals/components/w-search-container/w-search-container.scss
+++ b/packages/ui/src/components/form/w-search/_internals/components/w-search-container/w-search-container.scss
@@ -10,14 +10,16 @@
 
 .container {
   border-radius: 8px;
+  overflow: hidden;
 
   @include themed() {
     border: 1px solid t(border-color);
   }
 
   &__content {
+    max-height: 20rem;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: scroll;
     // animation: slide .35s forwards;
     transition: height 1s ease;
 
