--- a/packages/ui/src/components/form/w-select/w-select.scss
+++ b/packages/ui/src/components/form/w-select/w-select.scss
@@ -4,9 +4,17 @@
   gap: .4rem;
   padding: var(--default-input-padding);
 
+  border: 2px solid transparent;
+
   @include themed() {
     background: #f8f8f8;
     color: t(foreground-color);
+    border: 2px solid transparent;
+    transition: border-color .35s ease;
+
+    &:focus-within {
+      border-color: t(brand-color);
+    }
   }
 
   &__select {
