feat: theming is now reborn from the ashes

--- a/packages/ui/src/scss/_utilities.scss
+++ b/packages/ui/src/scss/_utilities.scss
@@ -13,6 +13,13 @@
   }
 }
 
+.w-surface-alt {
+  @include themed() {
+    background: t(background-color-alt);
+    color: t(foreground-color);
+  }
+}
+
 .w-branded-text {
   @include themed() {
     color: t(brand-color);
