--- a/packages/ui/src/components/form/w-select/w-select.scss
+++ b/packages/ui/src/components/form/w-select/w-select.scss
@@ -7,7 +7,7 @@
   border: 2px solid transparent;
 
   @include themed() {
-    background: #f8f8f8;
+    background: t(background-color-alt);
     color: t(foreground-color);
     border: 2px solid transparent;
     transition: border-color .35s ease;
