--- a/packages/ui/src/components/w-box/w-box.scss
+++ b/packages/ui/src/components/w-box/w-box.scss
@@ -1,25 +1,30 @@
-$section-padding: .8rem;
+$section-padding: 1.8rem 2.4rem;
 
 @keyframes fixed-fadein {
   from {
-    transform: translateX(10rem);
     opacity: 0;
+    transform: scale(.95);
   }
 
   to {
-    transform: translateX(0);
     opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes floating-fadein {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(.95);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
   }
 }
 
 .box {
-  &--floating {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
   &--fixed {
     position: absolute;
   }
@@ -29,9 +34,9 @@ $section-padding: .8rem;
     flex-direction: column;
     overflow: hidden;
 
-    &--bordered {
+    &--rounded {
       @include themed() {
-        border-radius: 5px;
+        border: 1px solid t(border-color);
       }
     }
 
@@ -58,17 +63,20 @@ $section-padding: .8rem;
         font-size: 1.2rem;
       }
 
-      .box__body,
       .box__footer {
         padding: 1.8rem 2.4rem;
       }
+    }
+
+    &--animate, &--floating {
+      animation: floating-fadein .2s forwards;
     }
 
     &--floating {
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
+
       min-width: 90vw;
       max-height: 80vh;
       border-radius: 14px;
