--- a/packages/ui/src/components/w-context-menu/w-context-menu.scss
+++ b/packages/ui/src/components/w-context-menu/w-context-menu.scss
@@ -1,29 +1,4 @@
-.contextmenu {
-  &__trigger {
-    display: flex;
-    justify-content: flex-start;
-  }
-
-  &__content {
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    min-width: 10rem;
-    border-radius: 4px;
-    overflow: hidden;
-
-    @include themed() {
-      :deep(*) {
-        color: t(foreground-color);
-      }
-
-      background: t(background-color);
-      box-shadow: 0 1px 4px t(shadow-color);
-      border: 1px solid t(border-color);
-    }
-  }
-
+.content {
   &__section {
     &:not(:last-child) {
       @include themed() {
@@ -35,14 +10,35 @@
   &__item {
     display: flex;
     width: 100%;
-    padding: .8rem !important;
+    padding: 1.6rem !important;
+    font-size: 1.1rem;
+    font-weight: 400;
 
     @include themed() {
+      color: t(foreground-color);
+
       &--reactive {
         &:hover {
           background: t(background-color-hover);
         }
       }
+
+      &:not(:last-child) {
+        border-bottom: 1px solid t(border-color);
+      }
+    }
+
+    @media screen and (min-width: 600px) {
+      padding: 1rem !important;
+      font-size: 11pt;
     }
   }
+}
+
+.contextmenu {
+  &__trigger {
+    display: flex;
+    justify-content: flex-start;
+  }
+
 }
