--- a/packages/ui/src/components/w-context-menu/w-context-menu.scss
+++ b/packages/ui/src/components/w-context-menu/w-context-menu.scss
@@ -10,9 +10,19 @@
   &__item {
     display: flex;
     width: 100%;
-    padding: 1.6rem !important;
     font-size: 1.1rem;
     font-weight: 400;
+
+    :deep(>*) {
+      width: 100%;
+      height: 100%;
+      padding: 1.6rem !important;
+
+      @media screen and (min-width: 600px) {
+        padding: 1rem !important;
+        font-size: 11pt;
+      }
+    }
 
     @include themed() {
       color: t(foreground-color);
@@ -26,11 +36,6 @@
       &:not(:last-child) {
         border-bottom: 1px solid t(border-color);
       }
-    }
-
-    @media screen and (min-width: 600px) {
-      padding: 1rem !important;
-      font-size: 11pt;
     }
   }
 }
