--- a/packages/ui/src/components/w-grid/w-grid.scss
+++ b/packages/ui/src/components/w-grid/w-grid.scss
@@ -3,6 +3,14 @@
   gap: 1.6rem;
   
   @media screen and (min-width: 600px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media screen and (min-width: 1200px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media screen and (min-width: 1400px) {
     grid-template-columns: repeat(4, 1fr);
   }
 }
