--- a/packages/ui/src/scss/_theming.scss
+++ b/packages/ui/src/scss/_theming.scss
@@ -17,6 +17,7 @@ $themed-properties: brand-color
   ,background-color-hover
   ,background-color-opaque
   ,body-background
+  ,clickable-color
   ,shadow-color;
 
 @mixin themed() {
