--- a/packages/ui/src/scss/themes/default.scss
+++ b/packages/ui/src/scss/themes/default.scss
@@ -1,7 +1,7 @@
 :root {
   --default-input-padding: .8rem;
   --default-brand-color: #003fb9;
-  --default-border-color: #e5e7eb;
+  --default-border-color: #e9ebef;
   --default-button-background-color: #0284c7;
   --default-button-background-color-alt: #ddddddaa;
   --default-button-background-color-hover: #dddddd;
@@ -12,8 +12,9 @@
   --default-background-color-alt: #f9f9f9;
   --default-background-color-hover: #dddddd;
   --default-background-color-opaque: #ffffffbb;
-  --default-body-background: #f9f9f9;
+  --default-body-background: #f0f2f5;
   --default-shadow-color: #ccc;
+  --default-clickable-color: #5090fa;
 }
 
 .loading {
