--- a/packages/ui/src/components/w-box/w-box.scss
+++ b/packages/ui/src/components/w-box/w-box.scss
@@ -65,22 +65,14 @@
         padding: 1rem 1.4rem;
         box-sizing: content-box;
 
-        font-weight: bold;
-        font-size: 1.2rem;
+        font-weight: 600;
+        font-size: 16pt;
 
         @media screen and (min-width: 800px) {
           padding: 1rem 2.4rem;
         }
       }
-
-      .box__footer {
-        padding: 1.8rem 1.4rem;
-
-        @media screen and (min-width: 800px) {
-          padding: 1.8rem 2.4rem;
-        }
-      }
-    }
+    } 
 
     &--animate, &--floating {
       animation: floating-fadein .2s forwards;
@@ -91,6 +83,7 @@
       top: 50%;
       left: 50%;
 
+      max-width: 90vw;
       min-width: 90vw;
       max-height: 80vh;
       border-radius: 14px;
@@ -180,17 +173,22 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    column-gap: .8rem;
+    column-gap: 1rem;
     margin-top: auto;
 
     transition: box-shadow .3s;
+    &--padded {
+      padding: 1rem 1.4rem;
 
-    @include padding;
+      @media screen and (min-width: 800px) {
+        padding: 1rem 2.4rem;
+      }
+    }
 
     @include themed() {
       border-top: 1px solid t(border-color);
       &--shadowed {
-        box-shadow: 0 -4px 20px t(shadow-color);
+        box-shadow: 0 4px 20px t(shadow-color);
         z-index: 10;
       }
     }
