--- a/packages/ui/src/components/w-button/w-button.scss
+++ b/packages/ui/src/components/w-button/w-button.scss
@@ -12,6 +12,8 @@
   position: relative;
   transition: all .2s;
   padding: .35em 1em;
+
+  box-sizing: content-box;
   text-align: center;
   border-radius: 10px;
   outline: none;
@@ -62,7 +64,7 @@
         fill: t(background-color);
       }
 
-      font-weight: 700;
+      // font-weight: 700;
     }
 
     &--brand {
@@ -71,19 +73,17 @@
   }
 
   &--small {
-    min-height: 2.2rem;
-    padding: .4rem 1rem;
+    padding: .6rem;
     font-size: 10pt;
   }
 
   &--medium {
-    min-height: 2.4rem;
-    padding: .4rem 1.4rem;
+    padding: .8rem;
     font-size: 11pt;
   }
 
   &--large {
     padding: 1rem 2.4rem;
-    font-size: 12pt;
+    font-size: 11pt;
   }
 }
