--- a/packages/ui/src/scss/themes/default.scss
+++ b/packages/ui/src/scss/themes/default.scss
@@ -12,7 +12,7 @@
   --default-background-color-alt: #f9f9f9;
   --default-background-color-hover: #dddddd;
   --default-background-color-opaque: #ffffffbb;
-  --default-body-background: #f0f2f5;
+  --default-body-background: #fff;
   --default-shadow-color: #ccc;
   --default-clickable-color: #5090fa;
 }
