--- a/packages/ui/src/views/dashboard/user/profile/profile.scss
+++ b/packages/ui/src/views/dashboard/user/profile/profile.scss
@@ -6,7 +6,7 @@
     padding: 0;
 
     @include themed() {
-      background: t(background-color);
+      background: t(background-color-alt);
       border: 1px solid t(border-color);
       border-radius: 10px;
       overflow: hidden;
