--- a/packages/ui/src/components/w-crud/w-crud.scss
+++ b/packages/ui/src/components/w-crud/w-crud.scss
@@ -8,18 +8,21 @@
   &__controls {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     justify-content: flex-end;
     gap: 1rem;
+  }
+
+  &__search {
+    flex: 1;
+    width: 100%;
+    order: 2;
   }
 
   &__actions {
     display: flex;
     align-items: center;
     gap: .4rem;
-  }
-
-  &__search {
-    flex: 1;
   }
 
   &__pagination {
