--- a/packages/ui/src/components/w-crud/w-crud.scss
+++ b/packages/ui/src/components/w-crud/w-crud.scss
@@ -2,7 +2,11 @@
   &__main {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.6rem;
+
+    @media screen and (min-width: 600px) {
+      gap: 1rem;
+    }
   }
 
   &__controls {
