--- a/packages/ui/src/components/w-button/w-button.scss
+++ b/packages/ui/src/components/w-button/w-button.scss
@@ -63,8 +63,6 @@
         color: t(background-color);
         fill: t(background-color);
       }
-
-      // font-weight: 700;
     }
 
     &--brand {
@@ -83,7 +81,7 @@
   }
 
   &--large {
-    padding: 1rem 2.4rem;
+    padding: .9rem 2.4rem;
     font-size: 11pt;
   }
 }
