feat: add borders to table by default

--- a/packages/ui/src/components/w-table/w-table.scss
+++ b/packages/ui/src/components/w-table/w-table.scss
@@ -56,7 +56,6 @@ $picture-size: 2rem;
 
     @include themed() {
       background: t(background-color-alt);
-      border: 1px solid t(border-color);
 
       @media screen and (min-width: 600px) {
         &:hover {
@@ -83,6 +82,10 @@ $picture-size: 2rem;
     &>td {
       @include cell-padding;
       font-size: 10pt;
+
+      @include themed() {
+        border-top: 1px solid t(border-color);
+      }
       // @media screen and (min-width: 600px) {
       //   @include themed() {
       //     &:not(:last-child) {
