--- a/packages/ui/src/components/w-box/w-box.scss
+++ b/packages/ui/src/components/w-box/w-box.scss
@@ -21,12 +21,12 @@
 @keyframes floating-fadein {
   from {
     opacity: 0;
-    transform: translate(-50%, -50%) scale(.95);
+    transform: translateY(-50%) scale(.95);
   }
 
   to {
     opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translateY(-50%) scale(1);
   }
 }
 
@@ -39,6 +39,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    padding: 0;
 
     &--rounded {
       @include themed() {
@@ -61,7 +62,6 @@
     }
 
     &--floating, &--fixed-right {
-      z-index: 50;
       .box__header {
         padding: .8rem 1.4rem;
         box-sizing: content-box;
@@ -82,7 +82,6 @@
     &--floating {
       position: fixed;
       top: 50%;
-      left: 50%;
 
       max-width: 90vw;
       min-width: 90vw;
