--- a/packages/ui/src/scss/themes/default.scss
+++ b/packages/ui/src/scss/themes/default.scss
@@ -10,6 +10,7 @@
   --default-foreground-color-alt: #000;
   --default-background-color: #fff;
   --default-background-color-alt: #f9f9f9;
+  --default-background-color-lighter: #eee;
   --default-background-color-hover: #dddddd;
   --default-background-color-opaque: #ffffffbb;
   --default-body-background: #fff;
