--- a/packages/ui/src/scss/_theming.scss
+++ b/packages/ui/src/scss/_theming.scss
@@ -14,6 +14,7 @@ $themed-properties: brand-color
   ,foreground-color-weak
   ,background-color
   ,background-color-alt
+  ,background-color-lighter
   ,background-color-hover
   ,background-color-opaque
   ,body-background
