--- a/packages/ui/src/components/w-table/w-table.scss
+++ b/packages/ui/src/components/w-table/w-table.scss
@@ -2,10 +2,6 @@ $picture-size: 2rem;
 
 @mixin cell-padding {
   padding: .6rem 1rem;
-
-  @media screen and (min-width: 600px) {
-    padding: .6rem .8rem;
-  }
 }
 
 .table {
@@ -32,7 +28,7 @@ $picture-size: 2rem;
       text-align: left;
 
       @include themed() {
-        background: #f5f5f5;
+        background: t(background-color-contrast);
       }
     }
 
@@ -115,8 +111,8 @@ $picture-size: 2rem;
     position: relative;
     padding: 0 !important;
     @include themed() {
+      background: t(background-color-contrast);
       border-top: 1px solid t(border-color);
-      background: #f5f5f5;
     }
   }
 
