feat(ui): add w-async, w-badge

--- a/packages/ui/src/components/dashboard/w-crud-topbar/w-crud-topbar.scss
+++ b/packages/ui/src/components/dashboard/w-crud-topbar/w-crud-topbar.scss
@@ -3,9 +3,10 @@
   flex: 1;
   gap: 1rem;
 
-  &__controls {
+  &__preset {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: .4rem;
   }
 }
