fix(web): describe revalidate wouldnt work

--- a/packages/ui/src/components/w-tabs/w-tabs.scss
+++ b/packages/ui/src/components/w-tabs/w-tabs.scss
@@ -14,15 +14,10 @@
   &__tab {
     display: flex;
     align-items: center;
+    gap: .2rem;
     cursor: pointer;
 
     margin-top: 4px;
-
-    // @include themed() {
-    //   &:not(:last-child) {
-    //     border-right: 1px solid t(border-color);
-    //   }
-    // }
 
     &--current {
       @include themed() {
