--- a/packages/ui/src/components/w-box/w-box.less
+++ b/packages/ui/src/components/w-box/w-box.less
@@ -1,4 +1,4 @@
-@mixin padding {
+.padding {
   padding: 1.4rem;
 
   @media screen and (min-width: 800px) {
@@ -139,7 +139,7 @@
     overscroll-behavior: contain;
 
     &--padded {
-      @include padding;
+      .padding();
     }
   }
 
