--- a/packages/ui/src/components/w-info/w-info.scss
+++ b/packages/ui/src/components/w-info/w-info.scss
@@ -15,6 +15,7 @@
     position: absolute;
     overflow: hidden;
     border-radius: 0 5rem 5rem 0 !important;
+    z-index: 20;
 
     &--top {
       top: -80%;
